@@ -180,6 +180,11 @@
 	returned 0.
 	* gcc.dg/asan/asan.exp: Likewise.
 
+2012-12-03  Marek Polacek  <polacek@redhat.com>
+	 
+	PR c/55570
+	* gcc.dg/pr55570.c: New test.
+	 
 2012-12-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* lib/asan-dg.exp (asan_get_gtest_test_list,
