@@ -1,3 +1,8 @@
+2012-12-03  Marek Polacek  <polacek@redhat.com>
+
+	PR c/55570
+	* c-common.c (check_user_alignment): Swap order of tests,
+	check TREE_CODE first.
 2012-11-28  Richard Biener  <rguenther@suse.de>
 
 	PR c/35634
